applications/openeuler-usercenter/usercenter/website-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/configuration-snippet: |
      add_header Content-Security-Policy "script-src 'self' 'unsafe-inline' 'unsafe-eval'; object-src 'none'; frame-ancestors 'self'";
      add_header X-XSS-Protection "1; mode=block";
      add_header X-Frame-Options "DENY";
      add_header Cache-Control "no-cache";
      add_header Pragma "no-cache";
      add_header X-Content-Type-Options "nosniff";
  name: website-ingress
  namespace: openeuler-usercenter
spec:
  rules:
  - host: id.openeuler.org
    http:
      paths:
      - backend:
          serviceName: website-service
          servicePort: 80
        path: /
  tls:
  - hosts:
    - id.openeuler.org
    secretName: website-tls
